[gd_scene load_steps=5 format=3 uid="uid://b7p3e5u8l5r52"]

[ext_resource type="Script" path="res://scripts/for_scenes/main_menu.gd" id="1_q2ruy"]
[ext_resource type="Texture2D" uid="uid://cy1r363pot5mv" path="res://assets/images/title_bg.png" id="3_flqxe"]
[ext_resource type="Texture2D" uid="uid://c0nobm6vf3dl4" path="res://assets/ui_renders/main_menu_book.png" id="3_xqhh2"]
[ext_resource type="Texture2D" uid="uid://dmpogiisg846u" path="res://assets/images/title.png" id="5_j82jr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2ruy")
metadata/_edit_use_anchors_ = true

[node name="MenuBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_flqxe")

[node name="BookBackground" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 429.0
offset_top = 20.0
offset_right = 1722.0
offset_bottom = 1326.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_xqhh2")

[node name="GameTitle" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 592.0
offset_top = 128.0
offset_right = 592.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_j82jr")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.632
anchor_right = 0.5
anchor_bottom = 0.632
offset_left = -236.0
offset_top = -58.5601
offset_right = 105.0
offset_bottom = 38.4402
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "PLAY_BUTTON"

[node name="TutorialButton" type="Button" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 776.0
offset_right = 1069.0
offset_bottom = 851.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 48
text = "HOW_TO_PLAY"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 651.0
offset_top = 898.0
offset_right = 1088.0
offset_bottom = 973.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 48
text = "OPTIONS_BUTTON"

[connection signal="button_up" from="PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="TutorialButton" to="." method="_on_tutorial_button_button_up"]
